# rust-http2

./: .gitignore  .rustfmt.toml  .travis.yml  .travis.yml-disabled  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  update-tls-api-to-local.sh
.github/workflows/: ci.yml
benches/: client_server.rs
ci/: install-h2spec.sh  run.sh
ci-gen/: Cargo.toml
ci-gen/src/: actions.rs  ghwf.rs  main.rs  yaml.rs
examples/: client.rs  server.rs  stress_test.rs
h2spec-test/: Cargo.toml
h2spec-test/src/: lib.rs
httpbis/: Cargo.toml
httpbis-test/: Cargo.toml
httpbis-test/examples/: stress_test.rs
httpbis-test/src/: assert_types.rs  bytes_ext.rs  client.rs  lib.rs  openssl_test_key_gen.rs  server_one_conn.rs  server_test.rs  t.rs  task.rs  tester.rs
httpbis-test/tests/: client.rs  server.rs  smoke.rs  tls.rs
httpbis/examples/: client.rs  server.rs
httpbis/src/: ascii.rs  assert_types.rs  client_died_error_holder.rs  data_or_headers.rs  data_or_headers_with_flag.rs  data_or_trailers.rs  debug_undebug.rs  deref_pin.rs  error.rs  exec.rs  headers_place.rs  lib.rs  log_ndc_future.rs  message.rs  req_resp.rs  resp.rs  result.rs  socket.rs  socket_tcp.rs  socket_unix.rs  solicit_async.rs  solicit_misc.rs  stream_after_headers.rs  stream_after_headers_2.rs
httpbis/src/bytes_ext/: buf_eq.rs  buf_get_bytes.rs  buf_vec_deque.rs  bytes_deque.rs  bytes_vec_deque.rs  iter_buf.rs  mod.rs
httpbis/src/client/: conf.rs  conn.rs  handler.rs  increase_in_window.rs  intf.rs  mod.rs  req.rs  resp.rs  resp_future.rs  resp_future_2.rs  stream_handler.rs  tls.rs  types.rs
httpbis/src/codec/: http_decode_read.rs  http_framed_read.rs  http_framed_write.rs  mod.rs  queued_write.rs  write_buffer.rs  zeroes.rs
httpbis/src/common/: atomic_box_option.rs  conn.rs  conn_command_channel.rs  conn_read.rs  conn_write.rs  death_aware_channel.rs  hash_set_shallow_clone.rs  increase_in_window.rs  increase_in_window_common.rs  init_where.rs  mod.rs  pump_stream_to_write_loop.rs  sender.rs  sink_after_headers.rs  stream.rs  stream_after_headers.rs  stream_from_network.rs  stream_handler.rs  stream_map.rs  stream_queue.rs  stream_queue_sync.rs  types.rs  window_size.rs
httpbis/src/death/: channel.rs  error_holder.rs  mod.rs  oneshot.rs  oneshot_no_content_drop.rs
httpbis/src/futures_misc/: mod.rs  select_lite.rs
httpbis/src/hpack/: decoder.rs  dynamic_table.rs  encoder.rs  mod.rs
httpbis/src/net/: addr.rs  connect.rs  listen.rs  mod.rs  socket.rs  tcp.rs  tls.rs  unix.rs
httpbis/src/server/: conf.rs  conn.rs  handler.rs  handler_paths.rs  increase_in_window.rs  mod.rs  req.rs  resp.rs  stream_handler.rs  tls.rs  types.rs
httpbis/src/solicit/: end_stream.rs  error_code.rs  session.rs  window_size.rs
httpbis/src/solicit/frame/: builder.rs  continuation.rs  data.rs  frame_type.rs  goaway.rs  headers.rs  mod.rs  ping.rs  priority.rs  push_promise.rs  rst_stream.rs  settings.rs  window_update.rs
httpbis/src/solicit/header/: method.rs  mod.rs  name.rs  status.rs
httpbis/src/solicit/tests/: common.rs  mod.rs
inteop/with-rust/: Cargo.toml
inteop/with-rust/src/: interop_client.rs  interop_server.rs  lib.rs
interop/with-go/go-rust-interop-client/: .gitignore  go-rust-interop-client.go
interop/with-rust/: Cargo.toml
interop/with-rust/src/: interop_client.rs  interop_server.rs
src/: ascii.rs  bytes_deque.rs  bytesx.rs  client.rs  client_conf.rs  client_conn.rs  client_died_error_holder.rs  client_tls.rs  conn.rs  data_or_headers.rs  data_or_headers_with_flag.rs  data_or_trailers.rs  display_comma_separated.rs  error.rs  exec.rs  headers_place.rs  http_common.rs  lib.rs  message.rs  misc.rs  rc_mut.rs  req_resp.rs  resp.rs  result.rs  result_or_eof.rs  server.rs  server_conf.rs  server_conn.rs  service.rs  service_paths.rs  socket.rs  socket_tcp.rs  socket_unix.rs  solicit_async.rs  solicit_misc.rs  stream_part.rs
src/bytes_deque/: buf_vec_deque.rs  bytes_vec_deque.rs  mod.rs
src/bytes_ext/: buf_get_bytes.rs  buf_vec_deque.rs  bytes_deque.rs  bytes_vec_deque.rs  mod.rs
src/client/: .conn.rs.swp  client_conf.rs  client_conn.rs  client_sender.rs  client_tls.rs  conf.rs  conn.rs  increase_in_window.rs  mod.rs  req.rs  stream_handler.rs  tls.rs  types.rs
src/codec/: http_decode_read.rs  http_frame_read.rs  http_framed_read.rs  http_framed_write.rs  mod.rs  queued_write.rs  write_buffer.rs  zeroes.rs
src/common/: atomic_box_option.rs  client_or_server.rs  closed_streams.rs  common_sender.rs  conf.rs  conn.rs  conn_command.rs  conn_command_channel.rs  conn_command_loop.rs  conn_read.rs  conn_read_loop.rs  conn_write.rs  conn_write_loop.rs  goaway_state.rs  hash_set_shallow_clone.rs  increase_in_window.rs  iteration_exit.rs  loop_event.rs  mod.rs  pump_stream_to_write_loop.rs  sender.rs  stream.rs  stream_from_network.rs  stream_handler.rs  stream_map.rs  stream_queue.rs  stream_queue_sync.rs  types.rs  waiters.rs  window_size.rs
src/futures_misc/: atomic_int_box.rs  latch.rs  mod.rs  select_lite.rs  sender_with_last.rs  shutdown_signal.rs  signal.rs  test.rs
src/hpack/: decoder.rs  dynamic_table.rs  encoder.rs  huffman.rs  mod.rs  static_table.rs
src/server/: conf.rs  conn.rs  handler.rs  handler_paths.rs  increase_in_window.rs  mod.rs  req.rs  resp.rs  server_conn.rs  server_sender.rs  server_tls.rs  stream_handler.rs  types.rs
src/solicit/: connection.rs  end_stream.rs  error_code.rs  header.rs  mod.rs  session.rs  stream_id.rs  window_size.rs
src/solicit/frame/: builder.rs  continuation.rs  data.rs  flags.rs  goaway.rs  headers.rs  mod.rs  ping.rs  priority.rs  push_promise.rs  rst_stream.rs  settings.rs  window_update.rs
src/solicit/header/: mod.rs  name.rs  value.rs
src/solicit/tests/: common.rs  mod.rs
tests/: client.rs  http_client.rs  http_server.rs  http_tls.rs  server.rs  smoke.rs  test_client.rs  test_server.rs  test_tls.rs  tls.rs
tests/test_misc/: mod.rs  server_echo.rs  server_one_conn.rs  server_test.rs  server_test_unix.rs  tester.rs
