[package]
name = "httpbis" # because name "http2" has already been claimed by another user
version = "0.7.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of HTTP/2 protocol"
repository = "https://github.com/stepancheg/rust-http2"
keywords = ["http2"]

[lib]
doctest = false

[dependencies]

log             = "0.4"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tokio-core      = "0.1.*"
tokio-io        = "0.1.*"
tokio-timer     = "0.1.*"
tokio-tls-api   = "0.1"
tls-api         = "0.1"
tls-api-stub    = "0.1"
void            = "1"
net2 = "0.2"
bytes = "0.4"

[target.'cfg(unix)'.dependencies]
tokio-uds       = "0.1"
unix_socket     = "0.5"

[dev-dependencies]

env_logger         = "0.5"
regex              = "0.2"
tls-api-native-tls = "0.1"
tls-api-openssl    = "0.1"
url                = "1"

[target.'cfg(unix)'.dev-dependencies]

tempdir         = "0.3"

[workspace]
members = ["interop/with-rust", "h2spec-test"]
