[package]
name = "httpbis"
version = "0.8.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of HTTP/2 protocol"
repository = "https://github.com/stepancheg/rust-http2"
keywords = ["http2"]

[lib]
bench = false

[dependencies]

log             = "0.4"
log-ndc         = "0.2.*"
futures         = "0.1.*"
futures-cpupool = "0.1.*"
tokio-core      = "0.1.*"
tokio-io        = "0.1.*"
tokio-timer     = "0.1.*"
tokio-tls-api   = "0.1"
tls-api         = "0.1"
tls-api-stub    = "0.1"
void            = "1"
net2 = "0.2"
bytes = "0.4"
rand = "~0.5"

[target.'cfg(unix)'.dependencies]
tokio-uds       = "0.1"
unix_socket     = "0.5"

[dev-dependencies]

tls-api-openssl = "0.1"
url             = "1"

[workspace]
members = ["interop/with-rust", "h2spec-test", "httpbis-test"]
