[package]
name = "httpbis"
version = "0.8.0-pre"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of HTTP/2 protocol"
repository = "https://github.com/stepancheg/rust-http2"
keywords = ["http2"]
edition = "2018"

[lib]
bench = false

[dependencies]

log             = "0.4"
log-ndc         = "0.2.*"
futures         = "0.3.1"
tokio = { version = "~0.2.6", features = ["net", "uds", "io-util", "time"] }
tls-api         = "0.3.2"
tls-api-stub    = "0.3.2"
void            = "1"
net2 = "0.2"
bytes = "0.5"
rand = "~0.5"

[target.'cfg(unix)'.dependencies]
unix_socket     = "0.5"

[dev-dependencies]

tls-api-openssl = "0.3.2"
url             = "1"

[workspace]
members = ["interop/with-rust", "h2spec-test", "httpbis-test"]
