[package]
name = "httpbis-h2spec-test"
version = "0.0.0"
publish = false
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust implementation of HTTP/2 protocol"
repository = "https://github.com/stepancheg/rust-http2"
keywords = ["http2"]
edition = "2018"

[dependencies]
httpbis = { path = "../httpbis" }
env_logger = "0.8.3"
log-ndc-env-logger = "0.2.*"
futures            = "0.3.1"
