[package]
name = "httpbis-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"
description = """
Tests for httpbis.

Moved into separate crate so tests could have a library to use (this library)
"""

[dependencies]

log                = "0.4"
log-ndc-env-logger = "0.2.*"

bytes              = "0.4"
futures            = "~0.1"
futures-cpupool    = "~0.1"
tokio-core         = "~0.1"

tls-api            = "~0.2"
tls-api-native-tls = "~0.2"
tls-api-openssl    = "~0.2"
tokio-tls-api      = "~0.2"

regex              = "0.2"
url                = "1"
tempdir            = "0.3"

httpbis = { path = ".." }

[target.'cfg(unix)'.dependencies]
tokio-uds       = "0.1"
unix_socket     = "0.5"
