[package]
name = "httpbis-test"
version = "0.0.0"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
publish = false
edition = "2018"
description = """
Tests for httpbis.

Moved into separate crate so tests could have a library to use (this library)
"""

[dependencies]

log                = "0.4"
log-ndc-env-logger = "0.2.*"

bytes              = "1.0.1"
futures            = "0.3.1"
# rt-threaded: https://github.com/tokio-rs/tokio/issues/2058
# , "rt-threaded"
tokio = { version = "1.2.0", features = ["net"] }

tls-api            = "0.5.0"
tls-api-native-tls = "0.5.0"
tls-api-openssl    = "0.5.0"

regex              = "0.2"
url                = "1"
tempdir            = "0.3"

httpbis = { path = "../httpbis" }
