[package]
name = "httpbis-interop"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
version = "0.0.0"

[lib]
doctest = false

[[bin]]
name = "http2-rust-interop-server"
path = "src/interop_server.rs"

[[bin]]
name = "http2-rust-interop-client"
path = "src/interop_client.rs"

[dependencies.httpbis]
path = "../.."

[dependencies]
bytes      = "0.4"
log        = "0.4"
env_logger = "0.5"
futures    = "0.1"
clap       = "2.31"
regex      = "0.2"
tls-api         = "0.1"
tls-api-openssl = "0.1"
