[package]
name = "httpbis-interop"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
version = "0.0.0"
edition = "2018"
publish = false

[lib]
doctest = false

[[bin]]
name = "http2-rust-interop-server"
path = "src/interop_server.rs"

[[bin]]
name = "http2-rust-interop-client"
path = "src/interop_client.rs"

[dependencies.httpbis]
path = "../../httpbis"

[dependencies]

futures            = "0.3.1"
# rt-threaded: https://github.com/tokio-rs/tokio/issues/2058
# , "rt-threaded"
tokio = { version = "1.2.0", features = ["net"] }

bytes      = "1.0.1"
log        = "0.4"
log-ndc-env-logger = "0.3.*"
clap       = "2.31"
regex      = "0.2"
tls-api         = "0.5.0"
tls-api-openssl = "0.5.0"
